--- a/examples/tutorial_1.ipynb
+++ b/examples/tutorial_1.ipynb
@@ -72,9 +72,9 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "\n",
-    "from scpv.models import ToyModel\n",
-    "from scpv.methods import ConformalPvalues\n",
-    "from scpv.methods import calibrate_ccv"
+    "from cccpv.models import ToyModel\n",
+    "from cccpv.methods import ConformalPvalues\n",
+    "from cccpv.methods import calibrate_ccv"
    ]
   },
   {
