--- a/examples/tutorial_2.ipynb
+++ b/examples/tutorial_2.ipynb
@@ -75,8 +75,8 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "\n",
-    "from scpv.models import ToyModel\n",
-    "from scpv.methods import CalibrationBound"
+    "from cccpv.models import ToyModel\n",
+    "from cccpv.methods import CalibrationBound"
    ]
   },
   {
